# localkin-service-audio

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  README.md.backup  UPGRADE_PLAN.md  UV_SETUP.md  check_version.py  demo_api.py  ollamaaudio.sh  pyproject.toml  requirements.txt  run_ollamaaudio.sh  setup.py
localkin_service_audio/: README.md  __init__.py  cli.py  config.py  models.py  server.py
localkin_service_audio/api/: server.py  websocket.py
localkin_service_audio/cli/: __init__.py  cli.py  main.py
localkin_service_audio/cli/commands/: __init__.py  add_model.py  benchmark.py  cache.py  config.py  list_templates.py  listen.py  models.py  music.py  ps.py  recommend.py  serve.py  status.py  synthesize.py  transcribe.py
localkin_service_audio/cli/utils/: __init__.py  device.py  output.py  progress.py
localkin_service_audio/core/: __init__.py  models.json  models.py  types.py
localkin_service_audio/core/audio_processing/: __init__.py  engine.py  stt.py  whisper_cpp.py
localkin_service_audio/core/audio_processing/stt/: __init__.py  base.py  faster_whisper_strategy.py  moonshine_strategy.py  paraformer_strategy.py  sensevoice_strategy.py  whisper_cpp_strategy.py  whisper_strategy.py
localkin_service_audio/core/audio_processing/tts/: __init__.py  base.py  chattts_strategy.py  cosyvoice_strategy.py  f5_strategy.py  kokoro_strategy.py  native_strategy.py
localkin_service_audio/core/config/: __init__.py  model_registry.py  settings.py
localkin_service_audio/mcp/: __init__.py  server.py
localkin_service_audio/music/: __init__.py  base.py  heartmula_strategy.py  musicgen_strategy.py
localkin_service_audio/ui/: routes.py
localkin_service_audio/ui/static/css/: style.css
localkin_service_audio/ui/static/js/: main.js  synthesize.js  transcribe.js
localkin_service_audio/ui/templates/: base_modern.html  modern_index.html  synthesize.html
ollamaaudio/: README.md  __init__.py  cli.py  model_templates.py  models.py  server.py  stt.py
openclaw-skill/localkin-audio/: SKILL.md
openclaw-skill/localkin-audio/scripts/: status.sh  transcribe.sh  tts.sh
scripts/: build.sh  build_whisper_cpp.sh  download_whisper_cpp_models.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_cli.py  test_engine.py  test_music.py  test_registry.py  test_types.py
